fix: remove tall space around iframe placeholder
It pushes the interesting contents too far down and out of view.

--- a/src/styles/molecules/m-registration-frame.scss
+++ b/src/styles/molecules/m-registration-frame.scss
@@ -5,11 +5,6 @@
 
   &__placeholder {
     text-align: center;
-    margin: 5em auto;
     font-style: italic;
-
-    &--tall {
-      margin: 8em auto;
-    }
   }
 }
